<resources>
    <string name="app_name">MyChatApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_this_chat_app">Hi there,I\'m using this Chat App!</string>
    <string name="change_status">Change Status</string>
    <string name="display_name">Display Name</string>
    <string name="new_status">New Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_image">Change Image</string>
    <string name="users_name">Users name</string>
    <string name="status">Status</string>
    <string name="total_friend">Total Friend</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
</resources>
