<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2E2C2C"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintEnd_toEndOf="@id/profile_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_friend"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/profile_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_friend_request"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_ic"
        android:text="@string/send_friend_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_friend"
        app:layout_constraintVertical_bias="0.005" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decline_friend_request"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_ic"
        android:text="@string/decline_friend_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/send_friend_request"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/send_friend_request"
        app:layout_constraintTop_toBottomOf="@id/send_friend_request"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>