<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
        android:text="@string/hi_there_i_m_using_this_chat_app"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_display_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_btn_change_status"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_ic"
        android:text="@string/change_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_image"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_btn_change_image"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="200dp"
        android:text="@string/change_image"
        android:background="@drawable/button_image_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_status" />

</androidx.constraintlayout.widget.ConstraintLayout>